Refactored Hypergraph class for more concise subclassing.

--- a/prototyping.ipynb
+++ b/prototyping.ipynb
@@ -41,9 +41,9 @@
    "source": [
     "g = Hypergraph()\n",
     "for _ in range(10):\n",
-    "    g.add_vertex()\n",
-    "g.add_edge([0, 1, 2], [3, 4], 'f')\n",
-    "g.add_edge([3, 4], [5, 6, 7], 'g')\n",
+    "    g.add_vertex(Hypergraph.create_vertex())\n",
+    "g.add_edge(Hypergraph.create_edge([0, 1, 2], [3, 4], 'f'))\n",
+    "g.add_edge(Hypergraph.create_edge([3, 4], [5, 6, 7], 'g'))\n",
     "g.inputs = [0, 1, 2, 8, 9]\n",
     "g.outputs = [5, 6, 7, 8, 9]\n",
     "g"
@@ -91,8 +91,8 @@
    "source": [
     "h = Hypergraph()\n",
     "for _ in range(7):\n",
-    "    h.add_vertex()\n",
-    "h.add_edge([2, 3, 4], [5, 6], 'h')\n",
+    "    h.add_vertex(Hypergraph.create_vertex())\n",
+    "h.add_edge(Hypergraph.create_edge([2, 3, 4], [5, 6], 'h'))\n",
     "h.inputs = [0, 1, 2, 3, 4]; h.outputs = [0, 5, 6, 1]\n",
     "h"
    ]
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -235,14 +235,14 @@
    "source": [
     "stress_test = Hypergraph()\n",
     "for _ in range(18):\n",
-    "    stress_test.add_vertex()\n",
-    "stress_test.add_edge([0, 1, 2], [3, 12, 16, 4], 'f')\n",
-    "stress_test.add_edge([6, 13, 5, 9, 14], [11, 10], 'g')\n",
-    "stress_test.add_edge([4, 3, 15, 8], [5, 6, 7], 'h')\n",
-    "stress_test.add_edge([12], [], 'e1')\n",
-    "stress_test.add_edge([16, 17], [], 'e2')\n",
-    "stress_test.add_edge([], [13, 17, 14], 's1')\n",
-    "stress_test.add_edge([], [15], 's2')\n",
+    "    stress_test.add_vertex(Hypergraph.create_vertex())\n",
+    "stress_test.add_edge(Hypergraph.create_edge([0, 1, 2], [3, 12, 16, 4], 'f'))\n",
+    "stress_test.add_edge(Hypergraph.create_edge([6, 13, 5, 9, 14], [11, 10], 'g'))\n",
+    "stress_test.add_edge(Hypergraph.create_edge([4, 3, 15, 8], [5, 6, 7], 'h'))\n",
+    "stress_test.add_edge(Hypergraph.create_edge([12], [], 'e1'))\n",
+    "stress_test.add_edge(Hypergraph.create_edge([16, 17], [], 'e2'))\n",
+    "stress_test.add_edge(Hypergraph.create_edge([], [13, 17, 14], 's1'))\n",
+    "stress_test.add_edge(Hypergraph.create_edge([], [15], 's2'))\n",
     "stress_test.inputs = [2, 9, 8, 0, 1]\n",
     "stress_test.outputs = [10, 7, 11]\n",
     "stress_test"
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
